# instakit

./: .bumpversion.cfg  .clang-format  .editorconfig  .gitignore  .landscape.yml  .tm_properties  .travis.yml  ABOUT.ETC.md  ABOUT.md  CODE_OF_CONDUCT.md  LICENSE.md  MANIFEST.in  Makefile  README.md  __version__.py  appveyor.yml  requirements.txt  setup.py  tmtags  tmtagsHistory  tox.ini  vendorize.toml
django_instakit/processors/: blur.py  curves.py  halftone.py  icc.py  squarecrop.py
django_instakit/utils/: colortype.py  dicts.py  encoding.py  gcr.py  kernels.py  lutmap.py  pipeline.py  spectralarithmetic.py  static.py
instakit/: __init__.py  __version__.py  exporting.py
instakit/abc/: __init__.py
instakit/comparators/ext/: butteraugli.h  butteraugli.pxd  butteraugli_defines.h  buttereye.cpp  buttereye.pyx
instakit/data/acv/: Vintage.acv  country.acv  desert.acv  dramaticsee.acv  exoticmountain_light.acv  fresh_blue.acv  red.acv  sparks by julia trotti.acv  wild at heart by julia trotti.acv  yellow.acv
instakit/meta/: parameters.py
instakit/processors/: adjust.py  blur.py  curves.py  halftone.py  noise.py  scale.py  squarecrop.py
instakit/processors/ext/: halftone.c  halftone.h  halftone.pyx  hqx.pxd  scale.c  scale.pyx
instakit/processors/ext/hqx/src/: Makefile.am  common.h  hq2x.c  hqx.h
instakit/utils/: colortype.py  dicts.py  filesystem.py  gcr.py  kernels.py  lutmap.py  misc.py  mode.py  ndarrays.py  pipeline.py  static.py  stats.py
instakit/utils/ext/: PyImgC_DTypeTemplate.py  README.md  (+4 more)
requirements/: dev.txt  install.txt  mypy.txt  tox.txt
(+33 files in other folders)
